[package]
name = "retry-after"
version = "0.4.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
description = "Retry-After header for Hyper's header module"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jwilm/retry-after"
documentation = "https://jwilm.github.io/retry-after/retry_after/"
edition = "2018"

[dependencies]
chrono = "0.4"
http = "1"
thiserror = "1"
